--- a/Movies/Views/Shared/_Layout.cshtml
+++ b/Movies/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2020 - Movies</p>
+            <p>&copy; 2020 - Movies - dtthom09</p>
         </footer>
     </div>
 
