--- a/Movies/Views/Movies/Actors.cshtml
+++ b/Movies/Views/Movies/Actors.cshtml
@@ -6,3 +6,18 @@
 }
 
 <h2>@Model.Actors[0]</h2>>
+
+<form>
+    <fieldset>
+        <legend>Selecting elements</legend>
+        <p>
+            <label>Select list</label>
+            <select id="myList">
+                <option value="1">one</option>
+                <option value="2">two</option>
+                <option value="3">three</option>
+                <option value="4">four</option>
+            </select>
+        </p>
+    </fieldset>
+</form>
