--- a/Movies/Views/Shared/_NavBar.cshtml
+++ b/Movies/Views/Shared/_NavBar.cshtml
@@ -13,6 +13,7 @@
             <ul class="nav navbar-nav">
                 <li><a asp-area="" asp-controller="Movies" asp-action="Index">Movies</a></li>
                 <li><a asp-area="" asp-controller="Movies" asp-action="Random">Customers</a></li>
+                <li><a asp-area="" asp-controller="Movies" asp-action="SortBy">SortBy</a></li>
             </ul>
         </div>
     </div>
